data/all_generated_tests/raw_wast_tests/call_TypeMismatchinControlFlowInstructions_3683.wast
;; 2. **Test Description**: Call a function with no return value inside a loop that expects a return value of a specific type.    - **Constraint**: This test validates if the implementation correctly handles the case where a called function does not provide the expected result, leading to a type error when leaving the loop.    - **Type Mismatch in Control Flow**: The expected type in the loop's context does not match the type (or lack thereof) returned by the function, causing errors.

(assert_invalid
  (module
    (func $type-mismatch-in-loop
      (loop (call 1))
    )
    (func (result i32))
  )
  "type mismatch"
)